flask-k8/flask-lb.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: flask-server-deployment 
  labels:
    app: webserver
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template: 
    metadata: 
      labels: 
        app: webserver
    spec: 
      containers: 
        - name: flask 
          image: sachinramesh190/sf:latest
          imagePullPolicy: Never          
          ports: 
            - containerPort: 5555 
---
apiVersion: v1 
kind: Service 
metadata: 
  name: flaskserver 
  labels: 
    service: flaskserver 
spec:
  type: LoadBalancer 
  ports: 
    - port: 5555 
      protocol: TCP 
      targetPort: 5555 
  selector: 
    app: webserver
